src/components/home/title/modal/Modal.module.scss
.modal{
    // position: absolute;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 3;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.8);
    display: flex;
    align-items: center;
    justify-content: center;

    .content{
        width: 300px;
        height: 300px;
        background-color: red;
    }

}

